cmake_minimum_required(VERSION 3.9)
project(cplus)

set(CMAKE_CXX_STANDARD 17)

#-----------------第二章 线性表-------------------------
#add_executable(cplus chapter2linear/singlelistmain.cpp)
#add_executable(cplus chapter2linear/seqmain.cpp)
#设立尾指针的单循环链表
#add_executable(cplus chapter2linear/singlecircletaillistmain.cpp)
#不带头结点的单链表
#add_executable(cplus chapter2linear/main2-8.cpp chapter7graph/c7-21.h chapter7graph/main7-2.cpp)
#------------------栈-------------------
#add_executable(cplus chapter3stack&queue/seqstackmain.cpp)
#add_executable(cplus chapter3stack&queue/seqstackmainChar.cpp chapter5array/c5-1.h chapter5array/bo5-1.cpp)
#add_executable(cplus  chapter3stack&queue/main3-2.cpp)
#add_executable(cplus  chapter3stack&queue/algo3-1.cpp)
#add_executable(cplus  chapter3stack&queue/algo3-2.cpp)
#add_executable(cplus  chapter3stack&queue/algo3-3.cpp)
#add_executable(cplus  chapter3stack&queue/algo3-4.cpp)
#------------第五章-数组-----------------------
#add_executable(cplus chapter5array/main5-1.cpp )
#add_executable(cplus chapter5array/main5-2.cpp)
#-------------第六章-树-----------
#add_executable(cplus  chapter6Tree/main6-1.cpp)
add_executable(cplus   chapter6Tree/main6-2.cpp)
#-------------第七章-图-----------
#add_executable(cplus  chapter7graph/main7-1.cpp )
#add_executable(cplus chapter7graph/main7-2.cpp)
#最小生成树
#add_executable(cplus chapter7graph/algo7-2.txt.cpp )
#-------------动态规划-硬币问题----------
#add_executable(cplus dp/coin.cpp )
#-------------动态规划-硬币问题----------
#add_executable(cplus dp/package.cpp)
#-------------动态规划-背包问题----------
#add_executable(cplus dp/chardistance.cpp )
#-------------动态规划-最长增长子序列(lis)----------
#add_executable(cplus  dp/lis.cpp )
#add_executable(cplus   dp/matrixChain.cpp)
#--------------------letcode--------------------
#add_executable(cplus leetcode/chapter2linear/chapter5array/main.cpp )
